Quorum/Library/Tests/TemplatingGenerated/Pass/TwoTypePriPriTextRetBoolObj.quorum
class Main
    action Main
        text one = "green"
        text two = "green"
        Yoda<text, text, Boolean> yoda
        Boolean ret = yoda:useForce(one, two)
        output "passed"
     end
end
