Quorum/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriTextRetintegerFail.quorum
class Main
    action Main
        text one = "green"
        text two = "green"
        Yoda<text, text, integer> yoda
        boolean wrongRet = yoda(one, two)
     end
end
